# donor-private-fundraising

./: .env.example  .eslintrc.json  .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/api/: .env.example  README.md  package.json  tsconfig.json
apps/api/idl/: tipjar_mxe.json  tipjar_receipts.json
apps/api/public/arcium/: verify_donation.arcis  verify_donation_v2_testnet.arcis
apps/api/src/: index.ts
apps/api/src/lib/: arcium-client.ts  config.ts  log.ts  rpc.ts  validation.ts
apps/api/src/routes/: arcium.ts  arcium.ts.backup
apps/web/: .env.example  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: env.d.ts  main.tsx  polyfills.ts
apps/web/src/components/: FundRaiselyBenefitClaim.tsx
apps/web/src/pages/: ClaimPage.tsx  DonateSol.tsx  DonationWithReveal.tsx  HomeIntro.tsx  HowItWorks.tsx  RecipientDashboard.tsx  RevealTransition.tsx
apps/web/src/utils/: connection.ts
artifacts/: circuits_hash.txt
docs/: DEMO.md
encrypted-ixs/: Anchor.toml  Arcium.toml
encrypted-ixs/src/: lib.rs  verify_donation.rs.backup
programs/tipjar-mxe/: Cargo.toml  TiPXWyYK5QpgEK7L12zmYsgARhZm9TURS1Nv7EE2qzj.json
programs/tipjar-mxe/src/: lib.rs
programs/tipjar-receipts/: .env.example  Cargo.toml  README.md  package.json
programs/tipjar-receipts/src/: lib.rs
programs/tipjar-receipts/tests/: receipt.rs  receipt.ts
