[package]
name = "tipjar_mxe"
version = "0.1.0"
description = "Cypherpunk Tip Jar MXE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tipjar_mxe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "0.3.0" }
arcium-macros = "0.3.0"
arcium-anchor = "0.3.0"
